--- a/index.html
+++ b/index.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-    </main>
 
-    <footer>
-      <p>I can code!</p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prework Study Guide</title>
+</head>
+
+<body>
+  <header id="top">
+    <h1>Prework Study Guide</h1>
+    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+  </header>
+  <main>
+    <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>Enter your HTML notes here</li>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>HTML is the structure, on which, style and function are added.</li>
+          <li>Semantic HTML is the best practice, when possible, some tags are not semantic friendly but are the best
+            way to solve the framing problem</li>
+          <li>Tags are not the same thing as elements</li>
+          <ul>
+            <li>tags are just the braces '<' '>' and name</li>
+            <li>elements are the tag and the content</li>
+          </ul>
+        </ul>
+      </ul>
+    </section>
+
+    <section class="card" id="css-section">
+      <h2>CSS</h2>
+      <ul>
+        <li>Enter your CSS notes here</li>
+      </ul>
+    </section>
+
+    <section class="card" id="git-section">
+      <h2>Git</h2>
+      <ul>
+        <li>Enter your Git notes here</li>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git pull: pulls the new content from the branch such that one may work on that branch locally and have the
+            most recent working copy.</li>
+        </ul>
+      </ul>
+    </section>
+
+    <section class="card" id="javascript-section">
+      <h2>JavaScript</h2>
+      <ul>
+        <li>Enter your JavaScript notes here</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>I can code!</p>
+  </footer>
+</body>
+
 </html>
