--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -16,27 +17,40 @@
   <main>
     <section class="card" id="html-section">
       <h2>HTML</h2>
+      <!-- <ul>
+        <li>Enter your HTML notes here</li> -->
       <ul>
-        <li>Enter your HTML notes here</li>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
+        <li>HTML is the structure, on which, style and function are added.</li>
+        <li>Semantic HTML is the best practice, when possible, some tags are not semantic friendly but are the best
+          way to solve the framing problem</li>
+        <li>Tags are not the same thing as elements</li>
         <ul>
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
-          <li>HTML is the structure, on which, style and function are added.</li>
-          <li>Semantic HTML is the best practice, when possible, some tags are not semantic friendly but are the best
-            way to solve the framing problem</li>
-          <li>Tags are not the same thing as elements</li>
-          <ul>
-            <li>tags are just the braces '<' '>' and name</li>
-            <li>elements are the tag and the content</li>
-          </ul>
+          <li>tags are just the braces '<' '>' and name</li>
+          <li>elements are the tag and the content</li>
         </ul>
       </ul>
+      <!-- </ul> -->
     </section>
 
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the OUTside of an element.</li>
+        <li>A padding indicates how much space we want around the content INside an element.</li>
+        <li>External CSS is the most popular and easy to maintain CSS; Internal is next and can only apply to the
+          current webpage; and Inline can only apply to that element and is good for quick changes/ test but is hard to
+          maintain</li>
+        <li>CSS Boc Model (outside to inside) Margin, Border, Padding, Content</li>
+        <li>Anatomy of CSS Rule Declarations: Selector {Property: Value, Property: Value } </li>
+        <ul>
+          <li>The Declaration is a Propery: Value pairing and the Declaration Block is one or more Declarations</li>
+          <li>Selectors can stack and is encouraged for D.R.Y code</li>
+          <li>Splats (*) can be used as a wildcar Selector</li>
+        </ul>
+        <li>rel attribute states the type of relationship that the document and linked resources have</li>
+        <li>href is location to the resource</li>
       </ul>
     </section>
 
