added some more basic JS code and notes on JS as a topic

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>`===` is case sensitive when checking string values</li>
+        <li>arrays can have mixed data types</li>
+        <li>arrays are zero based</li>
+        <li>`let` and `const` are the preferred methods to declare a variable and `var` is acceptable but not as widely
+          used</li>
+
       </ul>
     </section>
   </main>
